--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3998,7 +3998,7 @@
 /* Banner */
 
 	.banner {
-		background-color: #8a4680;
+		background-color: #000000;
 		color: #e2d1df;
 		padding: 8em 0;
 		position: relative;
@@ -4350,4 +4350,3 @@
 	
 	border:1px solid #aaaaaa;
 }
-
